objects/Association__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <description>Master-detail Relationship with Book</description>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Associations</relationshipLabel>
        <relationshipName>Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>220</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reading_List__c</fullName>
        <description>Master Detail Relationship with Reading List</description>
        <label>Reading List</label>
        <referenceTo>Reading_List__c</referenceTo>
        <relationshipLabel>Associations</relationshipLabel>
        <relationshipName>Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ass-{0000}</displayFormat>
        <label>Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>